--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 JWT_SECRET_KEY=schoolcaresecretkey
+MONGODB_URI=mongodb+srv://iqra:iqra123@cluster0.kx6hnho.mongodb.net/schoolcare?appName=Cluster0
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/schoolcare
