--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 JWT_SECRET_KEY=schoolcaresecretkey
-MONGODB_URI=mongodb+srv://iqra:iqra123@cluster0.kx6hnho.mongodb.net/schoolcare?appName=Cluster0
+# MONGODB_URI=mongodb+srv://iqra:iqra123@cluster0.kx6hnho.mongodb.net/schoolcare?appName=Cluster0
+MONGODB_URI=mongodb://localhost:27017/schoolcare
 PORT=5000
