--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.24.11",
     "lucide-react": "^0.561.0",
