--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ PORT=5000
 CLOUDINARY_NAME=doyhiacif
 CLOUDINARY_API_KEY=221424586279484
 CLOUDINARY_API_SECRET=7zGbqoNSC4FkgeKWPQcwBPVxTCs
+CLIENT_URL=http://localhost:5173
