--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,14 @@
 JWT_SECRET_KEY=schoolcaresecretkey
-# MONGODB_URI=mongodb+srv://iqra:iqra123@cluster0.kx6hnho.mongodb.net/schoolcare?appName=Cluster0
-MONGODB_URI=mongodb://localhost:27017/schoolcare
-PORT=5000
+
+
+
 CLOUDINARY_NAME=doyhiacif
 CLOUDINARY_API_KEY=221424586279484
 CLOUDINARY_API_SECRET=7zGbqoNSC4FkgeKWPQcwBPVxTCs
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://schoolcaredev.vercel.app
+
+MONGODB_URI=mongodb+srv://iqra:iqra123@cluster0.kx6hnho.mongodb.net/schoolcare?appName=Cluster0
+
+
+PORT=5000
+MONGODB_URI=mongodb://localhost:27017/schoolcare
