--- a/backend/.env
+++ b/backend/.env
@@ -7,7 +7,7 @@ CLOUDINARY_NAME=doyhiacif
 CLOUDINARY_API_KEY=221424586279484
 CLOUDINARY_API_SECRET=7zGbqoNSC4FkgeKWPQcwBPVxTCs
 
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=http://192.168.0.103:5173
 
 # MONGODB_URI=mongodb+srv://iqra:iqra123@cluster0.kx6hnho.mongodb.net/schoolcare?appName=Cluster0
 
